Add messages for mainpage section 'FlexiSkin' title in different edititons
[4.1.x]

ERM26281

Change-Id: If4413990823f468999f03cba13dc24ab6ddf3784

--- a/i18n/de.json
+++ b/i18n/de.json
@@ -6,7 +6,8 @@
 	"bs-mainpage-content-contact-title": "Sie brauchen Hilfe?",
 	"bs-mainpage-content-flexiskin-links": "\n\n[[Special:FlexiSkin|Jetzt gestalten]]\n\n[https://de.wiki.bluespice.com/wiki Mehr über FlexiSkin]\n\n",
 	"bs-mainpage-content-flexiskin-text": "Fügen Sie Ihr Logo hinzu und gestalten Sie\n\nIhr Wiki mit FlexiSkin.",
-	"bs-mainpage-content-flexiskin-title": "Stylen Sie Ihre Cloud",
+	"bs-mainpage-content-flexiskin-title": "Stylen Sie Ihr Wiki",
+	"bs-mainpage-content-flexiskin-title-cloud": "Stylen Sie Ihre Cloud",
 	"bs-mainpage-content-helpdesk-links": "\n\n[https://www.youtube.com/channel/UCfFb6dqcEfIxU0uwy6EqEgg Zu den Tutorials]\n\n[https://de.wiki.bluespice.com Zum Helpdesk]\n\n",
 	"bs-mainpage-content-helpdesk-text": "Weitere Unterstützung bieten unsere Video Tutorials und das Helpdesk.",
 	"bs-mainpage-content-helpdesk-title": "Dokumentation",
