--- a/i18n/en.json
+++ b/i18n/en.json
@@ -6,7 +6,8 @@
 	"bs-mainpage-content-contact-title": "Do you need help?",
 	"bs-mainpage-content-flexiskin-links": "\n\n[[Special:FlexiSkin|Customize now]]\n\n[https://en.wiki.bluespice.com/wiki More about FlexiSkin]\n\n",
 	"bs-mainpage-content-flexiskin-text": "Add your logo and design\n\nyour wiki with FlexiSkin.",
-	"bs-mainpage-content-flexiskin-title": "Style your Cloud",
+	"bs-mainpage-content-flexiskin-title": "Style your wiki",
+	"bs-mainpage-content-flexiskin-title-cloud": "Style your cloud",
 	"bs-mainpage-content-helpdesk-links": "\n\n[https://en.wiki.bluespice.com Visit the helpdesk]\n\n[https://www.youtube.com/channel/UCfFb6dqcEfIxU0uwy6EqEgg Visit our Youtube channel]\n\n",
 	"bs-mainpage-content-helpdesk-text": "Find all topics in our helpdesk\n\nor video tutorials.",
 	"bs-mainpage-content-helpdesk-title": "Documentation",
