--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -6,7 +6,8 @@
 	"bs-mainpage-content-contact-title": "Title for contact section on main page",
 	"bs-mainpage-content-flexiskin-links": "FlexiSkin section related links for the main page",
 	"bs-mainpage-content-flexiskin-text": "Text for FlexiSkin section on main page",
-	"bs-mainpage-content-flexiskin-title": "Title for FlexiSkin section on main page",
+	"bs-mainpage-content-flexiskin-title": "Title for FlexiSkin section on main page for BlueSpice free edition",
+	"bs-mainpage-content-flexiskin-title-cloud": "Title for FlexiSkin section on main page for BlueSpice cloud edition",
 	"bs-mainpage-content-helpdesk-links": "Documentation section related links for the main page",
 	"bs-mainpage-content-helpdesk-text": "Text for documentation section on main page",
 	"bs-mainpage-content-helpdesk-title": "Title for documentation section on main page",
