Update mainpage for BlueSpice 4
[4.1.x]

ERM26281

Change-Id: I43ab20a7e0f8e061e369639e8e3e16e468bac415

--- a/i18n/de.json
+++ b/i18n/de.json
@@ -4,7 +4,7 @@
 	"bs-mainpage-content-contact-links": "\n\n+49 (0941) 660 800\n\n[mailto:support@bluespice.com E-mail senden]\n\n[https://bluespice.com/de/kontakt/ Rückruf anfordern]\n\n",
 	"bs-mainpage-content-contact-text":" Kontaktieren Sie unser Support-Team unter",
 	"bs-mainpage-content-contact-title": "Sie brauchen Hilfe?",
-	"bs-mainpage-content-flexiskin-links": "\n\n[[Special:FlexiSkin|Jetzt gestalten]]\n\n[https://de.wiki.bluespice.com/wiki Mehr über FlexiSkin]\n\n",
+	"bs-mainpage-content-flexiskin-links": "\n\n[[Special:FlexiSkin|Jetzt gestalten]]\n\n[https://de.wiki.bluespice.com/wiki/Handbuch:Erweiterung/FlexiSkin Mehr über FlexiSkin]\n\n",
 	"bs-mainpage-content-flexiskin-text": "Fügen Sie Ihr Logo hinzu und gestalten Sie\n\nIhr Wiki mit FlexiSkin.",
 	"bs-mainpage-content-flexiskin-title": "Stylen Sie Ihr Wiki",
 	"bs-mainpage-content-flexiskin-title-cloud": "Stylen Sie Ihre Cloud",
@@ -14,7 +14,7 @@
 	"bs-mainpage-content-pagetitle-free": "Willkommen in BlueSpice free",
 	"bs-mainpage-content-pagetitle-pro": "Willkommen in BlueSpice pro",
 	"bs-mainpage-content-pagetitle-cloud": "Willkommen in der BlueSpice pro Cloud",
-	"bs-mainpage-content-tutorials-links": "\n\n[https://youtu.be/g0sJyyKQHcY Wie erstelle ich eine Seite?]\n\n[https://youtu.be/0czUwiXTeRs Wie formatiere ich Text?]\n\n[https://youtu.be/oanqCQYjxNc Wie arbeite ich mit Tabellen?]\n\n",
+	"bs-mainpage-content-tutorials-links": "\n\n[https://de.wiki.bluespice.com/wiki/Handbuch:Seiten_erstellen Wie erstelle ich eine Seite?]\n\n[https://de.wiki.bluespice.com/wiki/Handbuch:Erweiterung/VisualEditor Wie formatiere ich Text?]\n\n[https://de.wiki.bluespice.com/wiki/Handbuch:Erweiterung/VisualEditor/Tabellen Wie arbeite ich mit Tabellen?]\n\n",
 	"bs-mainpage-content-tutorials-text": "Machen Sie sich mit BlueSpice vertraut.",
 	"bs-mainpage-content-tutorials-title": "Für einen schnellen Start",
 	"config-install-sidebar": "Erstellung der MediaWiki:Sidebar mit Standardinhalten",
