--- a/i18n/en.json
+++ b/i18n/en.json
@@ -4,7 +4,7 @@
 	"bs-mainpage-content-contact-links": "\n\n+49 (0941) 660 800\n\n[mailto:support@bluespice.com Send an E-mail]\n\n[https://bluespice.com/contact/ Request a callback]\n\n",
 	"bs-mainpage-content-contact-text": "Contact our support team at",
 	"bs-mainpage-content-contact-title": "Do you need help?",
-	"bs-mainpage-content-flexiskin-links": "\n\n[[Special:FlexiSkin|Customize now]]\n\n[https://en.wiki.bluespice.com/wiki More about FlexiSkin]\n\n",
+	"bs-mainpage-content-flexiskin-links": "\n\n[[Special:FlexiSkin|Customize now]]\n\n[https://en.wiki.bluespice.com/wiki/Manual:Extension/FlexiSkin More about FlexiSkin]\n\n",
 	"bs-mainpage-content-flexiskin-text": "Add your logo and design\n\nyour wiki with FlexiSkin.",
 	"bs-mainpage-content-flexiskin-title": "Style your wiki",
 	"bs-mainpage-content-flexiskin-title-cloud": "Style your cloud",
@@ -14,7 +14,7 @@
 	"bs-mainpage-content-pagetitle-free": "Welcome to BlueSpice free",
 	"bs-mainpage-content-pagetitle-pro": "Welcome to BlueSpice pro",
 	"bs-mainpage-content-pagetitle-cloud": "Welcome to BlueSpice pro Cloud",
-	"bs-mainpage-content-tutorials-links": "\n\n[https://youtu.be/n1dR_fH0WGw How do I create a page?]\n\n[https://youtu.be/wsb7gvK6OMw How do I format text?]\n\n[https://youtu.be/WyGqu6HOlrk How do I work with menus?]\n\n",
+	"bs-mainpage-content-tutorials-links": "\n\n[https://en.wiki.bluespice.com/wiki/Manual:Create pages How do I create a page?]\n\n[https://en.wiki.bluespice.com/wiki/Manual:Extension/VisualEditor How do I format text?]\n\n[https://en.wiki.bluespice.com/wiki/Manual:Extension/VisualEditor/Tables How do I work with tables?]\n\n",
 	"bs-mainpage-content-tutorials-text": "Get familiar with BlueSpice.",
 	"bs-mainpage-content-tutorials-title": "For an easy start",
 	"config-install-sidebar": "Creating MediaWiki:Sidebar with default content",
